# GFL_inner_outer_transient_interaction

./: .gitignore  README.md  README_EMT_RMS_reproduction.md  pyproject.toml
01_PLL_CurrentLoop_Transient_Stability/: README.md
01_PLL_CurrentLoop_Transient_Stability/GFL_PLL_CurrentLoop_Reproduction/: README.md  requirements.txt
01_PLL_CurrentLoop_Transient_Stability/GFL_PLL_CurrentLoop_Reproduction/data/: fig9_digitized_boundary.csv
01_PLL_CurrentLoop_Transient_Stability/GFL_PLL_CurrentLoop_Reproduction/outputs/: case_summary.txt
01_PLL_CurrentLoop_Transient_Stability/GFL_PLL_CurrentLoop_Reproduction/scripts/: reconstruct_bandwidth_region.py  run_time_domain.py
01_PLL_CurrentLoop_Transient_Stability/GFL_PLL_CurrentLoop_Reproduction/src/: model.py
02_Nonideal_CurrentLoop_FastSlow_Reproduction/: README.md
02_Nonideal_CurrentLoop_FastSlow_Reproduction/GFL_Nonideal_CurrentLoop_Reproduction/GFL_Nonideal_CurrentLoop_Reproduction/: README.md  RESULTS_OVERVIEW.md
02_Nonideal_CurrentLoop_FastSlow_Reproduction/GFL_Nonideal_CurrentLoop_Reproduction/GFL_Nonideal_CurrentLoop_Reproduction/outputs/: critical_phase_jump.csv  fast_slow_spectrum.csv  summary.json  upo_branch.csv
03_Fu_interaction/Fu_2023_interaction_reproduction/: README.md
03_Fu_interaction/Fu_2023_interaction_reproduction/outputs/: summary.json
03_Fu_interaction/Fu_2023_interaction_reproduction/src/: fu_models.py  run_reproduction.py
docs/: theory.md
scripts/: run_all.py
src/gfl_interaction/: __init__.py  energies.py  model.py  reporting.py  small_gain.py
tests/: test_core.py
(+4 files in other folders)
